syntax="proto3";

package api;

option go_package = "github.com/echelon/thumbnailapi";

service ThumbnailService {
  rpc GetThumbnail (ThumbnailRequest) returns (ThumbnailResponse);
}

message ThumbnailRequest {
  string video_url = 1;
}

message ThumbnailResponse {
  bytes thumbnail_data = 1;
}